--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  
   "name": "ofppt-project",
   "private": true,
   "version": "0.0.0",
@@ -10,10 +11,15 @@
     "preview": "vite preview",
     "host": "vite --host"
   },
+  "engines": {
+    "node": "10.1.0",
+    "npm": "20.9.0"
+  },
+  
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
-    "@material-ui/core": "^4.12.4",
+    "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.14.18",
     "@mui/joy": "^5.0.0-beta.16",
@@ -30,16 +36,16 @@
     "material-ui-popup-state": "^1.9.3",
     "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.19.0",
     "recharts": "^2.10.3",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
-    "@types/react": "^18.2.37",
-    "@types/react-dom": "^18.2.15",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
     "@vitejs/plugin-react": "^4.2.0",
     "eslint": "^8.53.0",
     "eslint-plugin-react": "^7.33.2",
