--- a/package.json
+++ b/package.json
@@ -10,6 +10,10 @@
     "preview": "vite preview",
     "host": "vite --host"
   },
+  "engines": {
+    "node": "10.1.0",
+    "npm": "20.9.0"
+  },
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
@@ -45,6 +49,7 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.4",
+    "gh-pages": "^6.1.1",
     "vite": "^5.0.0"
   }
 }
