--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Strox7.github.io/ofppt",
+  "homepage": "https://Strox7.github.io",
   "name": "ofppt-project",
   "private": true,
   "version": "0.0.0",
